--- a/WebApplication/WebApplication/Views/Home/Index.cshtml
+++ b/WebApplication/WebApplication/Views/Home/Index.cshtml
@@ -3,6 +3,7 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Welcome!</h1>
+    <p>To Create a customer click on <a>Create a Customer</a></p>
+    <p>To View all customers click on <a href="/Customer/Admin">Admin</a></p>
 </div>
