--- a/WebApplication/WebApplication/Views/Customer/Create.cshtml
+++ b/WebApplication/WebApplication/Views/Customer/Create.cshtml
@@ -1,47 +1,46 @@
-﻿@model IEnumerable<WebApplication.Models.Customer>
-
-@{
-    ViewData["Title"] = "Admin";
+﻿@{
+    ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h3>Customers</h3>
-    <br/>    
-    <br/>    
-    @if (Model.Any())
-    {
-        <table class="table">
-            <thead>
-            <th>Customer ID</th>
-            <th>First Name</th>
-            <th>Last Name</th>
-            <th>Address</th>
-            <th>State</th>
-            <th>Country</th>
-            <th>Zip Code</th>
-            <th>Phone Number</th>
-            </thead>
-            <tbody>
-            @foreach (var customer in Model)
-            {
-                <tr>
-                    <td>@customer.Id</td>
-                    <td>@customer.FirstName</td>
-                    <td>@customer.LastName</td>
-                    <td>@customer.Address</td>
-                    <td>@customer.State</td>
-                    <td>@customer.Country</td>
-                    <td>@customer.ZipCode</td>
-                    <td>@customer.PhoneNumber</td>
-                </tr>
-            }
-            </tbody>
-        </table>
-    }
-    else
-    {
-        <p>There are no Customers</p>
-    }
-    
+<div>
+    <h2>Create a Customer</h2>
+    <form class="form-group" method="POST" action="/Customer/CreateCustomer">
 
+        <label>Customer ID</label>
+        <br/>
+        <input type="text" name="id">
+        <br/>
+        <label>First Name</label>
+        <br/>
+        <input type="text" name="firstName"/>
+        <br/>
+        <label>Last Name</label>
+        <br/>
+        <input type="text" name="lastName"/>
+        <br/>
+        <label>Address</label>
+        <br/>
+        <input type="text" name="address"/>
+        <br/>
+        <label>State</label>
+        <br/>
+        <input type="text" name="state"/>
+        <br/>
+        <label>Country</label>
+        <br/>
+        <input type="text" name="country"/>
+        <br/>
+        <label>Zip Code</label>
+        <br/>
+        <input type="text" name="zipCode"/>
+        <br/>
+        <label>Phone Number</label>
+        <br/>
+        <input type="text" name="phoneNumber"/>
+        <br/>
+        <br/>
+        <br/>
+        <input type="submit" value="Create">
+
+    </form>
 </div>
