--- a/WebApplication/WebApplication/Views/Customer/Create.cshtml
+++ b/WebApplication/WebApplication/Views/Customer/Create.cshtml
@@ -42,5 +42,8 @@
         <input type="submit" value="Create">
     </form>
     
+    <div>
+        <p>@ViewBag.MESSAGE</p>
+    </div>
     
 </div>
