--- a/WebApplication/WebApplication/Views/Home/Index.cshtml
+++ b/WebApplication/WebApplication/Views/Home/Index.cshtml
@@ -2,8 +2,15 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
+<div class="text-center" xmlns="http://www.w3.org/1999/html">
     <h1 class="display-4">Welcome!</h1>
-    <p>To Create a customer click on <a>Create a Customer</a></p>
-    <p>To View all customers click on <a href="/Customer/Admin">Admin</a></p>
+    <p>
+        To Create a customer click on
+        <a href="/Customer/Create">Create</a>
+    </p>
+    <p>
+        To View all customers click on
+        <a href="/Customer/Admin">Admin</a>
+    </p>
+
 </div>
